# PetEngine2

./: .gitignore  CMakeLists.txt  PetEngine2.vcxproj  PetEngine2.vcxproj.filters  README.md
Source/: cpp.hint  main.cpp
Source/Editor/UI/: Drawing.h  Font.cpp  Font.h  Image.h  Style.h  UI.cpp  UI.h  Widget.h  Widgets.cpp  Widgets.h
Source/Runtime/Base/: StringID.cpp  StringID.h
Source/Runtime/Core/: BaseTypes.h  ClassMeta.h  Concurrency.h  Core.h  ErrorMacros.h  Math.h  SerializeMacros.h  Util.h
Source/Runtime/Platform/: PlatformTypes.h  Window.cpp  Window.h  WindowsPlatform.cpp  WindowsPlatform.h
Source/Runtime/System/: IODispatcher.cpp  JobDispatcher.cpp  JobDispatcher.h
Source/Runtime/System/Renderer/: UIRenderer.cpp  UIRenderer.h
src/: CMakeLists.txt  buddy_alloc.cpp  canvas_sample.cpp  filesystem_ui_sample.cpp  freetype_sample.cpp  hello_triangle.cpp  main.cpp  test_main.cpp  ui_test_filesystem_view.cpp  ui_test_focus.cpp
src/base/: CMakeLists.txt  bench.cpp  bench.h  buddy_alloc.h  bump_alloc.h  command_line.h  common.h  error.h  intrusive_list.h  log.cpp  log.h  math_util.h  pooled_alloc.h  ref_counted.h  rtti.h  string_utils.cpp  string_utils.h  threading.cpp  threading.h  tree_printer.cpp  tree_printer.h  util.h  util_test.cpp  vector_types.h  win_minimal.cpp  win_minimal.h
src/editor/ui/: button.h  containers.cpp  containers.h  focus.h  font.cpp  font.h  framework.cpp  framework.h  image.h  popup.h  scroll_view.h  style.h  style_test.cpp  tooltip.h  ui.h  widgets.cpp  widgets.h
src/gfx/: CMakeLists.txt  canvas.cpp  canvas.h  common.h  font.cpp  font.h  font_cache.cpp  font_cache.h  shaper.cpp  shaper.h  v1.cpp  v1.h
src/gfx_legacy/: CMakeLists.txt  font.cpp  font.h  font_ft.h  input_types.h  native_window.cpp  native_window.h  ui_renderer.cpp  ui_renderer.h
src/gpu/: CMakeLists.txt  common.h  device.h  draw_context.h  gpu.h  renderer2d.cpp  util.h
src/gpu/d3d12/: buffer.cpp  buffer.h  common.h  common_dx12.h  context.cpp  context.h  d3d12_test.cpp  descriptor_heap.cpp  descriptor_heap.h  device.cpp  device.h  dx12_test.cpp  heap_allocator.h  pipeline_state.cpp  pipeline_state.h  slab_allocator.h  slab_allocator_dx12_v2.h  slab_allocator_heap.h  slab_allocator_heap_dx12_v2.h  slab_allocator_test.cpp  swap_chain.cpp  swap_chain.h  texture.cpp  texture.h
src/gpu/shader/: hlsl_codegen.cpp  hlsl_codegen.h  hlsl_compiler.cpp  hlsl_compiler.h  shader_dsl.h  shader_dsl_api.h  shader_dsl_ast.h  shader_dsl_test.cpp
src/gpu/shader/wgsl/: CMakeLists.txt  ast_alias.h  ast_attribute.h  ast_expression.h  ast_function.h  ast_node.h  ast_printer.cpp  ast_printer.h  ast_scope.h  ast_statement.h  ast_type.h  ast_variable.h  builtin_op.h  common.h  lexer.h  lexer_test.cpp  parser.cpp  parser.h  parser_test.cpp  program.cpp  program.h  program_alloc.cpp  program_alloc.h  program_builder.cpp  program_builder.h  token.h
src/gpu/shader/wgsl/signature_parser/: CMakeLists.txt  parser.h  parser_main.cpp
src/runtime/: common.h  core.h  error.h  font_ft.h  image.h  job_dispatcher.cpp  job_dispatcher.h  log.cpp  log.h  math_util.h  native_window.cpp  native_window.h  rtti.h  serialize.h  string_id.cpp  string_id.h  string_utils.cpp  string_utils.h  threading.cpp  threading.h  time_utils.h  ui_renderer.cpp  ui_renderer.h  util.h  util_test.cpp  win_minimal.cpp  win_minimal.h  windows_platform.cpp  windows_platform.h
src/runtime/base/: log.cpp  log.h  string_id.cpp  string_id.h
src/runtime/core/: concurrency.h  core.h  defines.h  error.h  math_util.h  rtti.h  serialize.h  types.h  util.h
src/runtime/gfx/: canvas.cpp  canvas.h  common.h  font.cpp  font.h  font_cache.cpp  font_cache.h  shaper.cpp  shaper.h  test_v3.cpp  v1.cpp  v1.h
src/runtime/gpu/: common.h  device.cpp  device.h  draw_context.cpp  draw_context.h
src/runtime/gpu/d3d12/: descriptor_heap_dx12.cpp  descriptor_heap_dx12.h  dx12_test.cpp  heap_allocator_dx12.h  slab_allocator_dx12_v2.h  slab_allocator_dx12_v2_test.cpp  slab_allocator_heap_dx12_v2.h
src/runtime/gpu/shader/: hlsl_codegen.cpp  hlsl_codegen.h  hlsl_compiler.h  shader_compiler.h  shader_dsl.h  shader_dsl_api.h  shader_dsl_ast.h  shader_dsl_test.cpp
src/runtime/platform/: native_window.cpp  native_window.h  windows_platform.cpp  windows_platform.h
src/runtime/renderer/: device.cpp  device.h  draw_context.h  renderer2d.cpp  renderer2d.h
src/runtime/renderer/d3d12/: allocator_dx12.h  allocator_dx12_heap.h  common_dx12.h  descriptor_heap_dx12.cpp  descriptor_heap_dx12.h  device_dx12.cpp  device_dx12.h  dx12_test.cpp  slab_allocator_dx12.h  slab_allocator_dx12_v2.h  slab_allocator_dx12_v2_test.cpp  slab_allocator_heap_dx12.h  slab_allocator_heap_dx12_v2.h
src/runtime/system/: io_dispatcher.cpp  job_dispatcher.cpp  job_dispatcher.h
src/runtime/system/renderer/: ui_renderer.cpp  ui_renderer.h
src/runtime/task/: future.h  future_test.cpp  task.h  task_executor.cpp  task_executor.h  task_source.cpp  task_source.h  task_test.cpp  task_tracker.cpp  task_tracker.h
src/runtime/util/: bench.h  intrusive_list.h
src/task/: CMakeLists.txt  future.h  future_test.cpp  task.h  task_executor.cpp  task_executor.h  task_source.cpp  task_source.h  task_test.cpp  task_tracker.cpp  task_tracker.h
src/test/: test.cpp
src/ui/: CMakeLists.txt  button.h  containers.cpp  containers.h  focus.h  framework.cpp  framework.h  popup.h  scroll_view.h  style.h  style_test.cpp  tooltip.h  ui.h  widgets.cpp  widgets.h
test/: CMakeLists.txt  test.cpp
vs/: PetEngine2.sln  PetEngine2.vcxproj  PetEngine2.vcxproj.filters
